[package]
name = "shelf"
version = "0.3.0"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
structopt = "*"
xdg = "*"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
